# trainer_backend

./: .env.example  Dockerfile  entrypoint.prod.sh  main.py  pyproject.toml
calories/: models.py  serializers.py  urls.py  views.py
calories/migrations/: 0001_initial.py
common/: apps.py  auth.py  pagination.py
config/: settings.py  urls.py
education/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
education/management/commands/: seed_flashcards.py  seed_quiz.py
education/migrations/: 0001_initial.py
form_analysis/: admin.py  analyzer.py  apps.py  models.py  serializers.py  urls.py  views.py
form_analysis/management/commands/: seed_exercises.py
form_analysis/migrations/: 0001_initial.py
meal_plans/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
meal_plans/migrations/: 0001_initial.py
users/: apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userprofile_height_and_more.py
